# genetic-lander-schema

./: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish-cargo.yml  publish-npm.yml
schemas/: bar.proto  training-run.proto
src/: lib.rs
