[package]
name = "genetic-lander-schema"
version = "0.1.0"
edition = "2021"
include = ["/src", "/build/rs/*"]
description = "Schema library for Genetic Lander Stack"
license = "Apache-2.0"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.22.1"
